fix navbar button spacing in mobile

--- a/jtflask/static/assets/css/navbar.css
+++ b/jtflask/static/assets/css/navbar.css
@@ -62,11 +62,14 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  width: 100%;
+  justify-content: space-evenly;
   .iconify {
     width: 24px;
     height: 24px;
   }
   @media (min-width: 768px) {
+    width: unset;
     height: 50%;
     justify-content: space-between;
     flex-direction: column;
